<resources>
    <string name="app_name">LangThang Coffee</string>
    <string name="endpoint_server">http://10.0.2.2/server_langthangcoffee</string>
    <string name="all_app_name_uppercase"><b>THE LANG THANG \n COFFEE</b></string>
    <string name="all_tv_hint_nhapsdt">Nhập số điện thoại</string>
    <string name="all_tv_hint_tenkhachhang">Tên khách hàng</string>
    <string name="all_tv_hint_hokhachhang">Họ khách hàng</string>
    <string name="all_tv_hint_matkhau">Mật khẩu từ 6 kí tự</string>
    <string name="all_tv_hint_diachigiaohang">Địa chỉ giao hàng</string>
    <string name="all_tv_btn_themmoi">Thêm mới</string>
    <string name="all_tv_btn_capnhat">Cập nhật</string>
    <string name="all_tv_btn_xoa">Xóa</string>
    <string name="all_tv_title_size">Size</string>
    <string name="all_tv_title_chonsize">Chọn 1 loại size</string>
    <string name="all_tv_title_topping">Topping</string>
    <string name="all_tv_title_chontopping">Chọn topping</string>
    <string name="all_tv_title_ghichu">Yêu cầu khác</string>
    <string name="all_tv_title_motaghichu">Những yêu cầu khác</string>
    <string name="all_tv_hint_ghichu">Nhập ghi chú</string>
    <string name="all_tv_title_phuongthucgiaohang">Phương thức giao hàng</string>
    <string name="all_tv_title_phuongthucgiaohang_tannoi">Tận nơi</string>
    <string name="all_tv_title_thongtingiaohang">Thông tin giao hàng</string>
    <string name="all_tv_title_sanphamdachon">Sản phẩm đã chọn</string>
    <string name="all_tv_title_tongcong">Tổng cộng</string>
    <string name="all_tv_title_thanhtien">Thành tiền</string>
    <string name="all_tv_title_phigiaohang">Phí giao hàng</string>
    <string name="all_tv_title_magiamgia">Mã giảm giá</string>
    <string name="all_tv_title_magiamgia_khongco">Không có</string>
    <string name="all_tv_title_sotienthanhtoan">Số tiền thanh toán</string>
    <string name="all_tv_title_phuongthucthanhtoan">Phương thức thanh toán</string>
    <string name="all_tv_title_phuongthucthanhtoan_tienmat">Tiền mặt</string>
    <string name="all_tv_title_thaydoi">Thay đổi</string>
    <string name="all_tv_title_apdung">Áp dụng</string>
    <string name="all_tv_hint_magiamgia">Nhập mã giảm giá</string>
    <string name="all_tv_hint_nguoinhan">Người nhận</string>
    <string name="all_tv_title_saochep">Sao chép</string>
    <string name="all_tv_title_choxacnhan">Chờ xác nhận</string>
    <string name="all_tv_title_danggiao">Đang giao</string>
    <string name="all_tv_title_hoantat">Hoàn tất</string>
    <string name="all_tv_title_dahuy">Đã hủy</string>
    <string name="all_tv_title_madonhang">Mã đơn hàng</string>
    <string name="all_tv_title_chitietdathang">Chi Tiết Đặt Hàng</string>
    <string name="all_tv_btn_huydonhang">Hủy đơn hàng</string>
    <string name="all_tv_btn_xacnhan">Xác nhận</string>
    <string name="all_tv_btn_hoantat">Hoàn tất</string>
    <string name="all_tv_title_taikhoan">Tài khoản</string>
    <string name="all_tv_title_donhang">Đơn hàng</string>
    <string name="all_tv_btn_uploadanh">Upload ảnh</string>
    <string name="rl_ln_fragment_dash_board_title">Chào Mừng Bạn Đến Với</string>
    <string name="tv_plus_84">+84</string>
    <string name="tv_vertical_line">|</string>
    <string name="signin_tv_btn_sign_in">Đăng nhập</string>
    <string name="signin_tv_or"><b>HOẶC</b></string>
    <string name="signin_tv_sign_in_with_google">Đăng nhập với Google</string>
    <string name="signin_tv_new_register">Tạo tài khoản mới</string>
    <string name="signup_tv_title_signup">Thông Tin Khách Hàng</string>
    <string name="signup_tv_title_thong_tin_ca_nhan">Thông Tin Cá Nhân</string>
    <string name="signup_tv_title_chinhsach">Chấp nhận chính sách</string>
    <string name="signup_tv_title_chuongtrinh">Chấp nhận Chương trình Thành Viên</string>
    <string name="signup_tv_btn_tieptheo">Tiếp theo</string>
    <string name="danhsachyeuthich_tv_title">Danh Sách Yêu Thích</string>
    <string name="dathang_tv_title">Đặt Hàng</string>
    <string name="dathang_tv_hint_timkiem">Tìm kiếm theo tên sản phẩm</string>
    <string name="dathang_tv_title_caphe">Cà phê</string>
    <string name="dathang_tv_title_trasua">Trà sữa</string>
    <string name="dathang_tv_title_soda">Soda</string>
    <string name="dathang_tv_title_banhngot">Bánh ngọt</string>
    <string name="dathangchitiet_tv_title">Chi Tiết Sản Phẩm</string>
    <string name="xacnhandathang_tv_title">Xác Nhận Đặt Hàng</string>
    <string name="xacnhandathang_tv_btn_dathang">Đặt hàng</string>
    <string name="xacnhandathang_tv_btn_themmon">Thêm món</string>
    <string name="thongtingiaohang_tv_title">Thông Tin Giao Hàng</string>
    <string name="thongtingiaohang_tv_title_diachimacdinh">Đặt làm địa chỉ mặc định</string>
    <string name="thongtingiaohang_tv_hint_nguoinhan">Người nhận</string>
    <string name="magiamgia_tv_title">Mã Giảm Giá</string>
    <string name="voucher_tv_title">Ưu Đãi Của Bạn</string>
    <string name="voucher_tv_title_voucher">Voucher của bạn</string>
    <string name="chitietvoucher_tv_title">Chi Tiết Voucher</string>
    <string name="chitietvoucher_tv_title_mota">Mô tả voucher</string>
    <string name="lichsudonhang_tv_title">Lịch Sử Đơn Hàng</string>
    <string name="danhsachdonhang_tv_title">Danh Sách Đơn Hàng</string>
    <string name="trangcanhan_tv_title">Trang Cá Nhân</string>
    <string name="trangcanhan_tv_title_lichsudonhang">Lịch sử đơn hàng</string>
    <string name="trangcanhan_tv_title_danhsachuudai">Danh sách ưu đãi</string>
    <string name="trangcanhan_tv_title_danhsachyeuthich">Danh sách sản phẩm yêu thích</string>
    <string name="trangcanhan_tv_title_thongtincanhan">Thông tin cá nhân</string>
    <string name="trangcanhan_tv_title_thaydoimatkhau">Thay đổi mật khẩu</string>
    <string name="trangcanhan_tv_title_dangxuat">Đăng xuất</string>
    <string name="trangcanhan_tv_title_lienhe">Liên hệ</string>
    <string name="trangcanhan_tv_title_tienich">Tiện ích</string>
    <string name="trangcanhan_tv_title_doimatkhau">Thay Đổi Mật Khẩu</string>
    <string name="trangcanhan_tv_hint_matkhauhientai">Mật khẩu hiện tại</string>
    <string name="trangcanhan_tv_hint_matkhaumoi">Mật khẩu mới</string>
    <string name="trangcanhan_tv_title_hotro">Hỗ trợ</string>
    <string name="trangquanly_tv_title">Trang Quản Lý</string>
    <string name="trangquanly_tv_title_danhsachdonhang">Danh sách đơn hàng</string>
    <string name="trangquanly_tv_title_danhsachtaikhoan">Danh sách tài khoản</string>
    <string name="trangquanly_tv_title_danhsachsanpham">Danh sách sản phẩm</string>
    <string name="trangquanly_tv_title_sanpham">Sản phẩm</string>
    <string name="trangquanly_tv_title_voucher">Voucher</string>
    <string name="trangquanly_tv_title_danhsachvoucher">Danh sách voucher</string>
    <string name="trangquanly_tv_title_danhsachloaivoucher">Danh sách loại voucher</string>
    <string name="trangquanly_tv_title_thongke">Thống kê</string>
    <string name="trangquanly_tv_title_doanhthu">Doanh thu</string>
    <string name="doanhthu_tv_title">Doanh Thu</string>
    <string name="doanhthu_tv_title_tongtienhoadon">Doanh thu đơn hàng đã giao</string>
    <string name="lienhe_tv_title">Liên Hệ</string>
    <string name="lienhe_tv_title_sdt">Số điện thoại</string>
    <string name="lienhe_tv_title_email">Email</string>
    <string name="lienhe_tv_title_phienbanungdung">Phiên bản ứng dụng</string>
    <string name="trangquanlyloaivoucher_tv_title">Danh Sách Loại Voucher</string>
    <string name="trangquanlyloaivoucher_tv_hint_timkiem">Tìm kiếm theo tên loại voucher</string>
    <string name="trangquanlyloaivoucher_tv_title_themsanpham">Thêm Loại Voucher</string>
    <string name="trangquanlyloaivoucher_tv_hint_tenloaivoucher">Tên loại voucher</string>
    <string name="trangquanlyloaivoucher_tv_hint_motaloaivoucher">Mô tả loại voucher</string>
    <string name="trangquanlyloaivoucher_tv_hint_tongtien">Giảm thành tiền (%)</string>
    <string name="trangquanlyloaivoucher_tv_hint_phiship">Giảm phí giao hàng (%)</string>
    <string name="trangquanlyloaivoucher_tv_hint_soluongtoithieu">Số lượng sản phẩm tối thiểu</string>
    <string name="trangquanlyvoucher_tv_title">Danh Sách Voucher</string>
    <string name="trangquanlyvoucher_tv_hint_timkiem">Tìm kiếm theo mã voucher</string>
    <string name="trangquanlyvoucher_tv_title_themvoucher">Thêm Voucher</string>
    <string name="trangquanlyvoucher_tv_hint_mavoucher">Mã voucher</string>
    <string name="trangquanlyvoucher_tv_title_randommavoucher">Random mã voucher</string>
    <string name="trangquanlyvoucher_tv_title_alltaikhoan">Tất cả người dùng</string>
    <string name="trangquanlytaikhoan_tv_title_themtaikhoan">Thêm Tài Khoản</string>
    <string name="trangquanlytaikhoan_tv_title_chitiettaikhoan">Chi Tiết Tài Khoản</string>
    <string name="trangquanlytaikhoan_tv_title_danhsachtaikhoan">Danh Sách Tài Khoản</string>
    <string name="trangquanlytaikhoan_tv_hint_timkiem">Tìm kiếm theo số điện thoại</string>
    <string name="trangquanlysanpham_tv_title_danhsachsanpham">Danh Sách Sản Phẩm</string>
    <string name="trangquanlysanpham_tv_title_themsanpham">Thêm Sản Phẩm</string>
    <string name="trangquanlysanpham_tv_title_danhmuc">Danh mục</string>
    <string name="trangquanlysanpham_tv_title_themsize">Thêm size</string>
    <string name="trangquanlysanpham_tv_title_themtopping">Thêm topping</string>
    <string name="trangquanlysanpham_tv_hint_tensanpham">Tên sản phẩm</string>
    <string name="trangquanlysanpham_tv_hint_motasanpham">Mô tả sản phẩm</string>
    <string name="ln_page_1_dash_board_title">#Welcome to</string>
    <string name="ln_page_1_dash_board_btn">Trải nghiệm</string>
    <string name="ln_page_1_dash_board_slogan">Không Chỉ Là Coffee \n Chúng Tôi Bán Cả Sự Trải Nghiệm</string>
    <string name="ln_page_1_dash_board_space">Không gian</string>
    <string name="ln_page_1_dash_board_desc_sapce">Không gian của LANGTHANG COFFEE được thiết kế với tông màu vàng ấm áp và thoải mái. Đồ nội thất được bố trí thông minh và tinh tế để mang lại sự thoải mái cho khách hàng. Bức tranh nghệ thuật treo trên tường cùng với đèn lồng pha lê tạo ra một không gian sang trọng và quyến rũ. Bạn có thể ngồi ở các góc ngồi riêng tư hoặc các bàn đơn tùy theo sở thích của mình. LANGTHANG COFFEE sẽ là một nơi lý tưởng để bạn tìm kiếm sự yên bình và thư giãn.\n</string>
    <string name="vp2_page_1_dash_board_space">vp2</string>
    <string name="rl_page_2_dash_board_btn">Tìm hiểu ngay ➞</string>
    <string name="ln_page_6_dash_board_title">VÌ SAO CHÚNG TÔI LÀ NƠI LÍ TƯỞNG CHO BẠN</string>
    <string name="ln_ln_page_6_dash_board_title_1"><b><u>VỀ CÀ PHÊ</u></b></string>
    <string name="ln_ln_page_6_dash_board_title_2"><b><u>VỀ MÔI TRƯỜNG</u></b></string>
    <string name="ln_ln_page_6_dash_board_title_3"><b><u>VỀ GIAO HÀNG</u></b></string>
    <string name="ln_ln_page_6_dash_board_desc_1">Cà phê tại quán của chúng tôi được pha chế từ những hạt cà phê chọn lọc kỹ càng và rang theo phương pháp truyền thống để đảm bảo hương vị đặc trưng và chất lượng tuyệt vời. Đến với quán cà phê của chúng tôi, bạn sẽ được thưởng thức một tách cà phê đậm đà và thơm ngon nhất.\n</string>
    <string name="ln_ln_page_6_dash_board_desc_2">Quán của chúng tôi có không gian ấm cúng và thiết kế sang trọng, tạo ra một môi trường thư giãn và đầy cảm hứng cho khách hàng. Bạn sẽ có cơ hội thưởng thức cà phê tuyệt vời trong một không gian thoải mái và đầy hứng khởi. Hãy ghé thăm quán của chúng tôi để tận hưởng không gian đẹp và thoải mái nhất.\n</string>
    <string name="ln_ln_page_6_dash_board_desc_3">Quán của chúng tôi có không gian ấm cúng và thiết kế sang trọng, tạo ra một môi trường thư giãn và đầy cảm hứng cho khách hàng. Bạn sẽ có cơ hội thưởng thức cà phê tuyệt vời trong một không gian thoải mái và đầy hứng khởi. Hãy ghé thăm quán của chúng tôi để tận hưởng không gian đẹp và thoải mái nhất.\n</string>
</resources>