<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/ln_page_6_dash_board_title"
        android:textAlignment="center"
        android:textColor="@color/deep_black"
        android:textSize="36dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="260dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:layout_margin="30dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/w1"
                    app:riv_corner_radius="10dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/ln_ln_page_6_dash_board_title_1"
                        android:textColor="@color/deep_black"
                        android:textSize="36dp" />

                    <me.biubiubiu.justifytext.library.JustifyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:layout_margin="30dp"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/ln_ln_page_6_dash_board_desc_1"
                        android:textColor="@color/deep_black"
                        android:textSize="20dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="270dp"
                    android:layout_height="190dp"
                    android:layout_gravity="center"
                    android:layout_margin="30dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/w2"
                    app:riv_corner_radius="10dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/ln_ln_page_6_dash_board_title_2"
                        android:textColor="@color/deep_black"
                        android:textSize="36dp" />

                    <me.biubiubiu.justifytext.library.JustifyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:layout_margin="30dp"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/ln_ln_page_6_dash_board_desc_2"
                        android:textColor="@color/deep_black"
                        android:textSize="20dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="224dp"
                    android:layout_height="333dp"
                    android:layout_gravity="center"
                    android:layout_margin="30dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/w3"
                    app:riv_corner_radius="10dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/ln_ln_page_6_dash_board_title_3"
                        android:textColor="@color/deep_black"
                        android:textSize="36dp" />

                    <me.biubiubiu.justifytext.library.JustifyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:layout_margin="30dp"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/ln_ln_page_6_dash_board_desc_3"
                        android:textColor="@color/deep_black"
                        android:textSize="20dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>