<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <RelativeLayout
        android:id="@+id/rl_navigation_top"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/back_icon"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/lienhe_tv_title"
            android:textColor="@color/deep_black"
            android:textSize="16dp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_below="@id/rl_navigation_top"

        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_all_component"
            android:paddingBottom="20dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                
                android:layout_marginTop="20dp"
               
                android:fontFamily="@font/inter_bold"
                android:text="@string/lienhe_tv_title_sdt"
                android:textColor="@color/deep_black"
                android:textSize="15dp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tv_ma_don_hang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:layout_marginTop="10dp"
               
                android:fontFamily="@font/inter_medium"
                android:text="0369084341"
                android:textColor="@color/deep_black"
                android:textSize="15dp"

                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                
                android:layout_marginTop="20dp"
               
                android:fontFamily="@font/inter_bold"
                android:text="@string/lienhe_tv_title_email"
                android:textColor="@color/deep_black"
                android:textSize="15dp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:layout_marginTop="10dp"
               
                android:fontFamily="@font/inter_medium"
                android:text="langthangcoffee@gmail.com"
                android:textColor="@color/deep_black"
                android:textSize="15dp"

                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                
                android:layout_marginTop="20dp"
               
                android:fontFamily="@font/inter_bold"
                android:text="@string/lienhe_tv_title_phienbanungdung"
                android:textColor="@color/deep_black"
                android:textSize="15dp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tv_info_ship_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:layout_marginTop="10dp"
               
                android:fontFamily="@font/inter_medium"
                android:text="1.0.0"
                android:textColor="@color/deep_black"
                android:textSize="15dp"
                tools:ignore="HardcodedText" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>